# AutoMath

./: settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/phantom/automath/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Expression.cpp  ExpressionStream.h  Java_Interface.cpp  OperandList.cpp  Operation_Functions.cpp  Parser.cpp  Parser.hpp  Substitutor.cpp  Substitutor.hpp  Term.cpp  Tests.hpp  Variable.cpp  automath.cpp
app/src/main/cpp/jni_api/: CMakeLists.txt  Class.cpp  Object.cpp  jni_api.hpp
app/src/main/java/com/phantom/automath/: AlgebraDatabaseHandler.kt  AppNavigation.kt  CommonData.kt  ExpressionStream.kt  MainActivity.kt
app/src/main/java/com/phantom/automath/ui/Screen/: AlgebraCreatorScreen.kt  MainDrawerContent.kt
app/src/main/java/com/phantom/automath/ui/composables/: ExpandableCard.kt
app/src/main/java/com/phantom/automath/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/phantom/automath/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
